[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/entities/Bullet.gd" type="Script" id=1]
[ext_resource path="res://resources/Objects/Projectiles/slug.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 5.57929

[node name="Bullet" type="RigidBody2D"]
contacts_reported = 10
contact_monitor = true
linear_velocity = Vector2( 500, 0 )
linear_damp = 0.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpawnAnchor" type="Node2D" parent="."]
position = Vector2( -6.99248, 0 )

[node name="Timers" type="Node" parent="."]

[node name="Lifespan" type="Timer" parent="Timers"]
wait_time = 0.7
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Timers/Lifespan" to="." method="_on_Lifespan_timeout"]
